<resources>
    <string name="app_name">Auditorias</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="company">Grupo Dicas</string>

    <string name="login_status_wrong_user">¡Usuario o contraseña incorrectos!</string>
    <string name="login_status_sucessful">Inicio correcto</string>

    <string name="preference_token_key">com.dicas.auditorias.PREFERENCE_TOKEN_KEY</string>
    <string name="saved_token_key">SAVED_TOKEN_KEY</string>
    <string name="saved_username_key">SAVED_USERNAME_KEY</string>

    <string name="title_activity_logdumb">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Iniciar sesión</string>

    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Usuario inválido</string>
    <string name="invalid_password">Contraseña demasiado corta</string>
    <string name="invalid_token">Sesión caducada</string>
    <string name="login_failed">"Error de inicio de sesión!"</string>
    <string name="no_local_token">no_local_token</string>

    <string name="next">Siguiente</string>

    <string name="nueva_auditoria">Nueva auditoria</string>

    <string name="spin_empresa_title">Elije una empresa</string>

    <string name="spin_depto_title">Elije un departamento</string>
    <string name="elija_empresa_spinner">Elija empresa</string>

    <string name="elija_departamento_spinner">Elija departamento</string>
    <string name="error_api">Error al consultar los datos de la base de datos</string>

    <string name="created">Creada el</string>

    <string name="activo_title">Activos fijos</string>

    <string name="existencia_titulo">Existencia</string>


    <string name="existencia_guardada_true">Existencia registrada</string>
    <string name="existencia_guardada_false">Existencia no registrada</string>
    <string name="existencia_guardada_null">Existencia desconocida</string>

    <string name="existencia_actual_true">Encontrado</string>
    <string name="existencia_actual_false">No encontrado</string>
    <string name="existencia_actual_null">Toque marcar como no encontrado</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="auditoria_status_options">
        <item>En curso</item>
        <item>Terminada</item>
        <item>Guardada</item>
    </string-array>

    <string name="auditoria_descripcion_hint">Ingresa un nombre o descripción</string>
    <string name="auditoria_nueva_button">Crear nueva auditoria</string>
    <string name="auditoria_nueva_title">Nueva auditoría</string>

    <string name="auditoria_sin_activos">¡Auditoría vacía! No hay nigún activo fijo con los filtros especificados.</string>
    <string name="auditoria_vacia">¡Sin auditorías! Aún no hay ninguna auditoria, presione el botón con el simbolo de "+" para agregar crear una nueva.</string>

    <string name="auditoria_actualizar_estatus">Actualizar estatus</string>
    <string name="auditoria_no">Auditoria #</string>
    <string name="marcar_auditoria_encurso">Marcar como en curso</string>
    <string name="marcar_auditoria_terminada">Marcar como terminada</string>
    <string name="marcar_auditoria_guardada">Finalizar y guardar</string>

    <string name="dialog_guardar_auditoria_title">Guardar auditoria</string>
    <string name="dialog_guardar_auditoria_message">¿Esta seguro que desea guardar y finalizar esta auditoria? Esta acción no se puede deshacer.</string>
    <string name="dialog_yes">SI</string>
    <string name="dialog_no">NO</string>

    <string name="dialog_logout_title">Cerrando aplicación</string>
    <string name="dialog_logout_message">Toque en cualquier zona fuera de este diálogo para cancelar.</string>
    <string name="dialog_logout_yes">Cerrar app y sesión</string>
    <string name="dialog_logout_no">Cerrar solo la app</string>


</resources>
